[project]
name = "dw-images"
version = "0.1.0"
description = "Add image support to DataWarrior .dwar files"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9",
]

[project.scripts]
dw-images = "dw_images.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dw_images"]
